<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditWidgetIcons</class>
 <widget class="QWidget" name="EditWidgetIcons">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>437</width>
    <height>300</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QRadioButton" name="defaultIconsRadio">
     <property name="text">
      <string>&amp;Use default icon</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QListView" name="defaultIconsView">
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="movement">
      <enum>QListView::Static</enum>
     </property>
     <property name="flow">
      <enum>QListView::LeftToRight</enum>
     </property>
     <property name="isWrapping" stdset="0">
      <bool>true</bool>
     </property>
     <property name="resizeMode">
      <enum>QListView::Adjust</enum>
     </property>
     <property name="spacing">
      <number>8</number>
     </property>
     <property name="viewMode">
      <enum>QListView::IconMode</enum>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QRadioButton" name="customIconsRadio">
     <property name="text">
      <string>Use custo&amp;m icon</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QListView" name="customIconsView">
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="movement">
      <enum>QListView::Static</enum>
     </property>
     <property name="flow">
      <enum>QListView::LeftToRight</enum>
     </property>
     <property name="isWrapping" stdset="0">
      <bool>true</bool>
     </property>
     <property name="resizeMode">
      <enum>QListView::Adjust</enum>
     </property>
     <property name="spacing">
      <number>8</number>
     </property>
     <property name="viewMode">
      <enum>QListView::IconMode</enum>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="customIconButtonsHorizontalLayout">
     <item>
      <widget class="QPushButton" name="addButton">
       <property name="text">
        <string>Add custom icon</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="deleteButton">
       <property name="text">
        <string>Delete custom icon</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="faviconButton">
       <property name="toolTip">
        <string>Download favicon for URL</string>
       </property>
       <property name="accessibleName">
        <string>Download favicon for URL</string>
       </property>
       <property name="text">
        <string>Download favicon</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="applyToChildrenHorizontalLayout" stretch="0,0">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>0</width>
         <height>0</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="applyIconToPushButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="toolTip">
        <string>Apply selected icon to subgroups and entries</string>
       </property>
       <property name="accessibleName">
        <string>Apply selected icon to subgroups and entries</string>
       </property>
       <property name="styleSheet">
        <string notr="true">padding: 4px 10px</string>
       </property>
       <property name="text">
        <string>Apply icon &amp;to ...</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>defaultIconsRadio</tabstop>
  <tabstop>defaultIconsView</tabstop>
  <tabstop>customIconsRadio</tabstop>
  <tabstop>customIconsView</tabstop>
  <tabstop>addButton</tabstop>
  <tabstop>deleteButton</tabstop>
  <tabstop>applyIconToPushButton</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
